<resources>
    <string name="app_name">Android Demo</string>
    <string name="splashGIFdescr">Splash Screen App Name</string>
    <string name="txtHeader">IceBreaker</string>
    <string name="subHeader">Built with Android</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="preferred_name">Preferred Name</string>
    <string name="button_get_question">Get a random question</string>
    <string name="answer_edit_text_hint">This will contain the answer</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="answer_placeholder_text">Enter your answer</string>
    <string name="title_bar_heading">Demo App</string>
</resources>